--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ teaching-cube.db.host=ec2-54-221-207-184.compute-1.amazonaws.com
 teaching-cube.db.name=d5o2bkmadbn238
 teaching-cube.db.port=5432
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=${PORT:5000}
